[gd_scene load_steps=4 format=2]

[ext_resource path="res://Canvas Layers/Pause.gd" type="Script" id=1]
[ext_resource path="res://Fonts/Oswald-Regular.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 2 )

[node name="Pause Screen" type="CanvasLayer"]
layer = 2

[node name="Pause" type="Control" parent="." groups=[
"PauseScreen",
]]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="Pause"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.227451, 0.227451, 0.227451, 0.564706 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Pause"]
margin_left = 135.0
margin_top = 358.0
margin_right = 528.0
margin_bottom = 925.0
color = Color( 0.305882, 0.305882, 0.305882, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Pause/ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 30.0
margin_top = 40.0
margin_right = -30.0
margin_bottom = -40.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Resume" type="Button" parent="Pause/ColorRect/VBoxContainer"]
margin_top = 163.0
margin_right = 333.0
margin_bottom = 214.0
custom_fonts/font = SubResource( 1 )
text = "RESUME"

[node name="Settings" type="Button" parent="Pause/ColorRect/VBoxContainer"]
margin_top = 218.0
margin_right = 333.0
margin_bottom = 269.0
custom_fonts/font = SubResource( 1 )
text = "SETTINGS - WIP"

[node name="MainMenu" type="Button" parent="Pause/ColorRect/VBoxContainer"]
margin_top = 273.0
margin_right = 333.0
margin_bottom = 324.0
custom_fonts/font = SubResource( 1 )
text = "MAIN MENU"

[connection signal="pressed" from="Pause/ColorRect/VBoxContainer/Resume" to="Pause" method="_on_Resume_pressed"]
[connection signal="pressed" from="Pause/ColorRect/VBoxContainer/Settings" to="Pause" method="_on_Settings_pressed"]
[connection signal="pressed" from="Pause/ColorRect/VBoxContainer/MainMenu" to="Pause" method="_on_MainMenu_pressed"]
